@@ -53,7 +53,6 @@ import com.google.common.primitives.Ints;
 import java.io.IOException;
 import java.io.Serializable;
 import java.math.BigInteger;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -288,7 +287,7 @@ public class DictionaryFilterTest {
 
   @SuppressWarnings("deprecation")
   private void testDictionaryEncodedColumnsV1() throws Exception {
-    Set<String> dictionaryEncodedColumns = new HashSet<String>(Arrays.asList(
+    Set<String> dictionaryEncodedColumns = new HashSet<String>(List.of(
         "binary_field",
         "single_value_field",
         "optional_single_value_field",
@@ -326,7 +325,7 @@ public class DictionaryFilterTest {
   }
 
   private void testDictionaryEncodedColumnsV2() throws Exception {
-    Set<String> dictionaryEncodedColumns = new HashSet<String>(Arrays.asList(
+    Set<String> dictionaryEncodedColumns = new HashSet<String>(List.of(
         "binary_field",
         "single_value_field",
         "optional_single_value_field",
